add far and frr of parabolic distribution

--- a/Paper.tex
+++ b/Paper.tex
@@ -331,6 +331,12 @@ We illustrated the probability of success for a credential parabolic distributed
     \includegraphics[width=0.85\textwidth]{fig_success_parabola.pdf}
     \caption{Probability of success for a single credential wallet parabolic distributed}
 \end{figure}
+Moreover, we defined the FAR vs FRR curve for the parabolic distributed credential in Figure 6.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{fig_FARvFRR_parabola.pdf}
+    \caption{FAR vs FRR curve parabolic distributed}
+\end{figure}
 
 \subsection{Two Credentials}
 For a wallet $w$ comprised of two independently and identically distributed credentials, derived from either the same or different PDF’s, we defined the integrated system success as the probability of users successfully defend their wallets under two scenarios:
