--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{pythontex}
 \usepackage{graphicx}
+\usepackage{adjustbox}
 \usepackage{float}
 
 \title{Integrating Continuous Credentials in Authentication
@@ -287,46 +288,53 @@ We will find FAR and FRR as a function of the threshold $T$ and define the proba
 \end{array}
 \right.
 \]
-We derivative $P_{\text{success}}$ and find the critical points of it in each interval and then, compare between them to find the global maxima that represents the optimal threshold $T_{\text{opt}}$. 
-\[
-\frac{dP_{\text{success}}}{dT} =
-\begin{cases}
-0, & T < \alpha_1 \;\lor\; T > \beta_2, \\[6pt]
-\displaystyle
-\frac{6 (T-\alpha_1)(T-\alpha_2)}{(\alpha_1-\alpha_2)^3},
-& \alpha_1 \le T \le \beta_1, \\[10pt]
-\displaystyle
--\frac{6 (T-\alpha_1)(T-\beta_2)}{(\alpha_1-\alpha_2)^3 (\beta_1-\beta_2)^3}
-\bigl(qT^3 + mT^2 + nT + s\bigr),
-& \beta_1 \le T \le \alpha_2, \\[10pt]
-\displaystyle
--\frac{6 (T-\beta_1)(T-\beta_2)}{(\beta_1-\beta_2)^3},
-& \alpha_2 \le T \le \beta_2.
-\end{cases}
-\]
-Where:
+We differentiate $P_{\text{success}}(T)$ and compute its critical points in each interval. By comparing the stationary values obtained in all valid regions, we identify the global maximum, which corresponds to the optimal threshold $T_{\text{opt}}$.
+
+Before writing the piecewise derivative, we define the polynomial coefficients:
 \[
 \begin{aligned}
-q &= 4, \\[8pt]
-m &= -\alpha_{1} - 5\alpha_{2} - 5\beta_{1} - \beta_{2}, \\[8pt]
+q &= 4, \\[6pt]
+m &= -\alpha_{1} - 5\alpha_{2} - 5\beta_{1} - \beta_{2}, \\[6pt]
 n &= -\alpha_{1}^{2}
      + 3\alpha_{1}\alpha_{2}
      + \alpha_{1}\beta_{1}
      + 6\alpha_{2}\beta_{1}
      + \alpha_{2}\beta_{2}
      + 3\beta_{1}\beta_{2}
-     - \beta_{2}^{2}, \\[8pt]
+     - \beta_{2}^{2}, \\[6pt]
 s &= \alpha_{1}^{2}\beta_{1}
      - 3\alpha_{1}\alpha_{2}\beta_{1}
      - 3\alpha_{2}\beta_{1}\beta_{2}
      + \alpha_{2}\beta_{2}^{2}.
 \end{aligned}
 \]
+
+With these coefficients, the derivative of $P_{\text{success}}(T)$ is given by the following piecewise expression:
+\[
+\frac{dP_{\text{success}}}{dT} =
+\begin{cases}
+0, & T < \alpha_1 \;\lor\; T > \beta_2, \\[6pt]
+
+\displaystyle
+\frac{6 (T-\alpha_1)(T-\alpha_2)}{(\alpha_1-\alpha_2)^3},
+& \alpha_1 \le T \le \beta_1, \\[12pt]
+
+\displaystyle
+-\frac{6 (T-\alpha_1)(T-\beta_2)}{(\alpha_1-\alpha_2)^3(\beta_1-\beta_2)^3}
+\bigl(qT^3 + mT^2 + nT + s\bigr),
+& \beta_1 \le T \le \alpha_2, \\[12pt]
+
+\displaystyle
+-\frac{6 (T-\beta_1)(T-\beta_2)}{(\beta_1-\beta_2)^3},
+& \alpha_2 \le T \le \beta_2.
+\end{cases}
+\]
+
 In the second interval, the derivative has a single critical point at $T=\alpha_{1}$. Since the derivative is strictly positive for all $T>\alpha_{1}$, this point corresponds to a local minimum rather than a maximum. Similarly, in the fourth interval, the only critical point occurs at $T=\beta_{2}$, and the derivative is strictly negative for all $T<\beta_{2}$. Therefore, this interval also contains no maximum either.
 
-We therefore turn to the third interval. In this region, the derivative is the product of a cubic polynomial and two linear factors. The linear factors vanish at $T=\alpha_{1}$ and $T=\beta_{2}$, both of which lie outside the third interval. Consequently, the existence of critical points within this interval depends solely on the cubic term. Solving this cubic (Appendix),reveals exactly one real root with the remaining two roots being complex.
+We therefore turn to the third interval. In this region, the derivative is the product of a cubic polynomial and two linear factors. The linear factors vanish at $T=\alpha_{1}$ and $T=\beta_{2}$, both of which lie outside the third interval. Consequently, the existence of critical points within this interval depends solely on the cubic term. Solving this cubic ,reveals exactly one real root with the remaining two roots being complex. The closed form of the cubic solution can not be simplified further more than a complex expression. Thus, we denote the solution as $T_{\text{cubic}}$.
 
-By examining the sign of the derivative on both sides of the critical point, we verify that it constitutes a global maximum of $P_{\text{safe}}(T)$. We denote this maximizing point by $T_{\text{opt}}$.
+By examining the sign of the derivative on both sides of the critical point $T_{\text{cubic}}$, we verify that it constitutes a global maximum of $P_{\text{safe}}(T)$. We denote this maximizing point by $T_{\text{opt}}$.
 
 To demonstrate that this optimal threshold differs from the Equal Error Rate (EER) threshold, we computed the EER point separately as follows:
 
@@ -334,19 +342,32 @@ To demonstrate that this optimal threshold differs from the Equal Error Rate (EE
            {\alpha_{1} - \alpha_{2} + \beta_{1} - \beta_{2}} \neq T_{\text{opt}}
 \]
 
-We illustrated the probability of success for a credential parabolic distributed depends on the threshold $T$ in Figure 5.
+We illustrate several user and attacker distributions and present their corresponding probability of success curves, expressed as functions of the threshold $T$ in Figure 5 and Figure 6 respectively.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{fig_success_parabola.pdf}
+    \includegraphics[width=1.0\textwidth]{fig_distributions_parabola.pdf}
+    \caption{User and Attacker Parabolic Distributions}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{fig_psuccess_parabola.pdf}
     \caption{Probability of success for a single credential wallet parabolic distributed}
 \end{figure}
-Moreover, we defined the FAR vs FRR curve for the parabolic distributed credential in Figure 6.
+
+Moreover, we illustrate the FAR–FRR curves for each pair of user and attacker distributions, and mark both the optimal point and the EER point, as shown in Figure 7.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{fig_FARvFRR_parabola.pdf}
+    \includegraphics[width=1.0\textwidth]{fig_FARvFRR_parabola.pdf}
     \caption{FAR vs FRR curve parabolic distributed}
 \end{figure}
 
+To quantify the effect of the variance on the deviation between the optimal operating point $T_{\text{opt}}$ and the equal error rate (EER) point $T_{\text{EER}}$, we numerically computed this gap as a function of the overlap area between the user and attacker PDFs. Increasing the overlap area between the distributions, achieved by reducing the distance between their roots, corresponds to lower variance and reduced separability between the two distributions. The simulations reveal that as the variance increases, the gap $\lvert T_{\text{opt}} - T_{\text{EER}} \rvert$ grows accordingly, until the operating threshold moves into a regime where it effectively minimizes only one of the error rates, either FAR or FRR, driving the other to zero. This phenomenon is shown in Figure~8. These findings indicate that higher attacker variance enlarges the potential security advantage gained by operating at $T_{\text{opt}}$ rather than at the EER point.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{fig_gap_vs_overlap.pdf}
+    \caption{Gap between optimal point and EER point vs overlapping area parabolic distributed}
+\end{figure}
 \subsection{Two Credentials}
 For a wallet $w$ comprised of two independently and identically distributed credentials, derived from either the same or different PDF’s, we defined the integrated system success as the probability of users successfully defend their wallets under two scenarios:
 
@@ -362,22 +383,8 @@ b. \textbf{OR} Require at least one credential to be satisfied. For success, we 
 P_{\text{Success}}(w^{\text{OR}}) = \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{safe2}}} + \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{loss2}}} + \mathrm{P_{\text{safe2}}} \cdot \mathrm{P_{\text{loss1}}}
 \]
 
+Our analysis 
 
-
-
-
-\subsection{Symmetric Uniform Distribution Function}
-\subsection{Symmetric Parabolic Distribution Function}
-%%%
-%%%
-%%%
-\section{Asymmetric Distribution Function}
-\subsection{Asymmetric Gaussian Distribution Function}
-\subsection{Asymmetric Uniform Distribution Function}
-\subsection{Asymmetric Parabolic Distribution Function}
-%%%
-%%%
-%%%
 \section{Model}
 \subsection{Mechanism Success 2 credentials}
 \subsection{Mechanism Success 3 credentials}
